// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Image image-round="..." /> DEPRECATED props props image-round-bottom 1`] = `
<img
  className="ek-image ek-image_round-bottom_full"
/>
`;

exports[`<Image image-round="..." /> DEPRECATED props props image-round-left 1`] = `
<img
  className="ek-image ek-image_round-left_full"
/>
`;

exports[`<Image image-round="..." /> DEPRECATED props props image-round-right 1`] = `
<img
  className="ek-image ek-image_round-right_full"
/>
`;

exports[`<Image image-round="..." /> DEPRECATED props props image-round-top 1`] = `
<img
  className="ek-image ek-image_round-top_full"
/>
`;

exports[`<Image image-round="..." /> extend 2 props image-round 1`] = `
<img
  className="ek-image ek-image_round-top-left_xs ek-image_round-bottom-right_xs ek-image_round-top-right_xl ek-image_round-bottom-left_xl"
/>
`;

exports[`<Image image-round="..." /> extend 3 props image-round 1`] = `
<img
  className="ek-image ek-image_round-top-left_xs ek-image_round-top-right_xl ek-image_round-bottom-left_xl ek-image_round-bottom-right_m"
/>
`;

exports[`<Image image-round="..." /> extend 4 props image-round 1`] = `
<img
  className="ek-image ek-image_round-top-left_s ek-image_round-top-right_m ek-image_round-bottom-right_l ek-image_round-bottom-left_xl"
/>
`;

exports[`<Image image-round="..." /> props image-round 1`] = `
<img
  className="ek-image ek-image_round_full"
/>
`;

exports[`<Image image-round="..." /> props image-round-bottom-left 1`] = `
<img
  className="ek-image ek-image_round-bottom-left_full"
/>
`;

exports[`<Image image-round="..." /> props image-round-bottom-right 1`] = `
<img
  className="ek-image ek-image_round-bottom-right_full"
/>
`;

exports[`<Image image-round="..." /> props image-round-top-left 1`] = `
<img
  className="ek-image ek-image_round-top-left_full"
/>
`;

exports[`<Image image-round="..." /> props image-round-top-right 1`] = `
<img
  className="ek-image ek-image_round-top-right_full"
/>
`;
